# War-economic-impact

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
app/: app.py
config/: config.yaml
data/: README.md
data/processed/: .gitkeep
models/: .gitkeep  regression_xgb.joblib  scaler_xgb.joblib
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_evaluation.ipynb
portfolio/: README.md  index.html  script.js  style.css
reports/figures/: .gitkeep
src/: __init__.py  utils.py
src/data/: __init__.py  make_dataset.py  preprocess.py
src/features/: build_features.py
src/models/: evaluate_model.py  predict_model.py  train_model.py
src/visualization/: visualize.py
tests/: __init__.py  conftest.py  test_data.py  test_features.py  test_models.py
